7 make comments controller (#30)
* Create CommentController.php

* Create CommentRequest.php

* Create CommentPolicy.php

* Create CommentService.php

* Add comment function

* remove comment function

* edit comment function

* get user comments function

* get comments by kebab function

* admin remove comment function

* added imports

* Update CommentRequest.php

* comments rules

* messages for commnets validation errors

* update policy

* delete comment policy

* imports for  comment policy

* comments routes

* better grouping of routes

* swagger annotations for comments

* Update CommentService.php

* Deleted not used code

* corrected typo in comment controller name

* added fillable atributes to comment model

* fix to max lenght comment

* service init

* refactored comments controller

changed order of functions
now using the service and policy

* use trait for policy

* corrected routes

* Update api-docs.json

* corrected response in swagger

* corrected path in swagger

* Update api-docs.json

* Create FavouriteController.php

* Create FavouriteService.php

* Service for adding kebab to favourites

* Service for removing kebab from favourites

* Service for getting users kebabs from favourites

* function to check if user has kebab in favourites

* imports for favourite controller

* construction of service

* add to favourites function in controller

* remove from favourites function in controller

* get user favourites function in controller

* swagger annotations

* routes for favourite kebabs controller

* Update FavouriteService.php

* Update api-docs.json

* Revert "Update api-docs.json"

This reverts commit 0a06c38f1e40c9a66bdffa2c30ce7cbab2c9ebf2.

* Revert "Update FavouriteService.php"

This reverts commit 12542837c139b283a4f9711bf6f344a4cf917a3e.

* Revert "routes for favourite kebabs controller"

This reverts commit b696a7d5a9978b6
